crates/reductool-proc-macro/tests/ui/pattern_struct.rs
use reductool_proc_macro::aitool;

struct S {
    x: i32,
    y: i32,
}

#[aitool]
fn f(S { x, y }: S) {}

fn main() {}
